--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.19.2</version> <!-- Or a later stable 2.19.x version -->
         </dependency>
+
+        <!-- Log4j2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.24.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.0</version>
+        </dependency>
     </dependencies>
 
 </project>
